<resources>
    <string name="app_name">Multiplication</string>
    <string name="enter_number">Enter Number</string>
    <string name="todo">TODO</string>
    <string name="continue1">CONTINUE</string>
    <string name="enter_multiplier">Enter Multiplier</string>
    <string name="button2">Custom</string>
    <string name="button3">Table</string>
    <string name="button4">Bmi</string>
    <string name="text">Multiplication Table</string>
    <string name="bmi_calculator">Bmi Calculator</string>
    <string name="title_activity_bmicalculator">BmicalculatorActivity</string>
    <string name="calculate_bmi">Calculate Bmi</string>
    <string name="what_is_bmi">What Is Bmi ?</string>
    <string name="body_mass_index">Body Mass Index (BMI) is a person\'s weight in kilograms divided by the square of height in meters. A high BMI can be an indicator of high body fatness. BMI can be used to screen for weight categories that may lead to health problems but it is not diagnostic of the body fatness or health of an individual.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="inch">Inch</string>
    <string name="feet">Feet</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="calculate">Calculate</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->


</resources>